# robbdd

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: .gitignore  parse_bdd_specs.py  table_test.py
examples/models/: brsu.scene  lab.scene  lab.scenex  pickplace.bdd  pickplace_cart_product.bdd  pickplace_quantifiers.bdd  pickplace_table.bdd  pickplace_table_custom.bdd  pickplace_table_custom.bddx  pickplace_table_new_predicates.bdd  pickplace_table_new_syntax.bdd
grammars/: bdd.tx
src/bdd_textx/: graph.py  registration.py
src/bdd_textx/classes/: bdd.py  common.py  scene.py  uri.py
src/bdd_textx/generator/: utils.py
src/bdd_textx/generator/template/: __behaviour_file__.var.json.jinja  __behaviours_f__-__environments_f__-__agents_f__.var.json.jinja
src/bdd_textx/generator/template/agents/: __agents_f__.agn.json.jinja  __agents_file__.agn.json.jinja
src/bdd_textx/generator/template/environments/: __environments_f__.env.json.jinja  __environments_file__.env.json.jinja
src/bdd_textx/generator/template/scenes/: __agents_f__-agents.scene.json.jinja  __agents_file__-agents.scene.json.jinja  __environments_f__-env.scene.json.jinja  __environments_file__-env.scene.json.jinja
src/bdd_textx/generator/template/templates/: __behaviours_f__.tmpl.json.jinja
src/bdd_textx/grammars/: base.tx  bdd.tx  scene.tx  uri.tx
src/robbdd/: gens.py  graph.py  langs.py  registration.py
src/robbdd/classes/: bdd.py  bddx.py  common.py  scene.py
src/robbdd/generator/: utils.py
src/robbdd/generator/template/agents/: __agents_f__.agn.json.jinja
src/robbdd/grammars/: base.tx  bdd.tx  bddx.tx  scene.tx
src/robbdd/rdf/: bdd.py  bddx.py  clauses.py  common.py  scene.py
src/robbdd/templates/: robbdd.behave.environment.py.jinja  robbdd.behave.steps.py.jinja  robbdd.feature.jinja
tests/: test_textx_languages.py
