[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robbdd"
version = "0.0.1"
authors = [
    { name="Minh Nguyen", email="minh@mail.minhnh.com" }
]
description = """
A TextX Language for working with Behaviour-Driven Development (BDD) meta-model.
"""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
  'textx', 'textX-jinja', 'rdflib'
]

[project.entry-points.textx_languages]
robbdd = "robbdd.registration:bdd_lang"
robbdd-scene = "robbdd.registration:scene_lang"

[project.entry-points.textx_generators]
bdd-tx_json-ld = "robbdd.registration:bddtx_jsonld_generator"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
